--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -1,5 +1,5 @@
-# This workflow will build a Java project with Ant
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-ant
+# .github/workflows/ant.yml
+# CI build Java project with Ant + JDK 21
 
 name: Java CI
 
@@ -11,15 +11,21 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Show Java version
+        run: java -version
+
+      # 4. Build với Ant
+      - name: Build with Ant
+        run: ant -noinput -buildfile build.xml jar
